Member 2 backend part

--- a/AIML-Project/src/main/resources/application.properties
+++ b/AIML-Project/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=marineguard
+# AI Service Configuration
+ai.service.url=http://localhost:5000
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Upload directory (create this folder)
+upload.dir=uploads/observations/
