--- a/AIML-Project/src/main/resources/application.properties
+++ b/AIML-Project/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=marineguard
+spring.data.mongodb.uri=mongodb+srv://marineusnm:marinepswd@cluster0.abcde.mongodb.net/marine_guard_db?retryWrites=true&w=majority
